--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: python            # this works for Linux but is an error on macOS or Windows
+addons:
+  apt:
+    sources:
+    - google-chrome
+    packages:
+    - google-chrome-stable
+
 jobs:
   include:
     - name: "Python 3.8.0 on Xenial Linux"
@@ -18,4 +25,7 @@ jobs:
 install: pip3 install -r requirements.txt  # all three OSes agree about 'pip3'
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
+before_script: 
+-python3 manage.py migrate || python manage.py migrate
+-python3 manage.py populate_database || python manage.py populate_database
 script: python3 manage.py test || python manage.py test
