--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ install: pip3 install -r requirements.txt  # all three OSes agree about 'pip3'
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
 before_script: 
-  -python3 manage.py migrate || python manage.py migrate
-  -python3 manage.py populate_database || python manage.py populate_database
-script: python3 manage.py test || python manage.py test
+  -python3 manage.py migrate 
+  -python3 manage.py populate_database
+script: python3 manage.py test 
