--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: python
+job:
+  include:
+        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+              env: PATH=functional_tests\chromedriver.exe
+
 python:
   - "2.7"
   - "3.4"
