--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,11 @@ jobs:
           command: |
             pip install --user -r requirements.txt
       - run:
+          name: Settings Environnement variables
+          command: |
+            echo 'export DEBUG_ENV_VARIABLE="True"'
+            echo 'export SUB_PROJECT_SK='3bed2b4a461e5f699fa66392a870c0e5e566004ec4e2f4b6''
+      - run:
           name: Migration database
           command: |
             python manage.py migrate
