--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,32 @@
+  
+dist: bionic
 language: python
-job:
-  include:
-        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
-        env: PATH=functional_tests\chromedriver.exe
 
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"      # current default Python on Travis CI
-  - "3.7"
-  - "3.8"
-  - "3.8-dev"  # 3.8 development branch
-  - "nightly"  # nightly build
-# command to install dependencies
+  - '3.6'
+
+addons:
+  # ajouter uniquement les navigateurs utilisés
+  chrome: stable
+  firefox: latest
+
+branches:
+  only:
+    - staging
 install:
-  - pip install -r requirements.txt
-# command to run tests
+  pip install-r requirements.txt
+
 before_script:
-- python manage.py migrate
+  # ajouter tchappui-webdrivers dans requirements.txt
+  - install-webdrivers
+  - python manage.py migrate
+
+env:
+  global:
+    - DJANGO_SETTINGS_MODULE="config.settings.travis"
+
+services:
+  - postgresql
+
 script:
-  - python manage.py test
+  - python manage.py test 
