--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,8 @@ addons:
 
 services:
   -postgresql
-
-env:
-  global:
-    - DJANGO_SETTINGS_MODULE="config.settings.travis"
-
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
 install:
   - pip install -r requirements.txt
 # command to run tests
