--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ services:
   -postgresql
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
+  - install -webdrivers
+
 install:
   - pip install -r requirements.txt
 # command to run tests
