--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,21 @@ addons:
 services:
   -postgresql
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c "CREATE DATABASE mydb;" -U postgres
   - install -webdrivers
+  - python manage.py migrate
+
+before_install:
+  - export DJANGO_SETTINGS_MODULE=sub_project.settings
+  - export PYTHONPATH=$HOME/builds/Bayard75/Projet8-Plateforme-de-substitution
+  - export PIP_USE_MIRRORS=true
 
 install:
   - pip install -r requirements.txt
+  - pip install psycopg2 --quiet
 # command to run tests
 before_script:
 - python manage.py migrate
 script:
   - python manage.py test
+
