--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,13 @@ addons:
 services:
   -postgresql
 before_install:
-  - export DJANGO_SETTINGS_MODULE=sub_project.settings
+  - export DJANGO_SETTINGS_MODULE=sub_project.settings.base
   - export PYTHONPATH=$HOME/builds/Bayard75/Projet8-Plateforme-de-substitution
   - export PIP_USE_MIRRORS=true
 
 install:
   - pip install -r requirements.txt
   - pip install psycopg2 --quiet
-  - export SUB_PROJECT_SK='3bed2b4a461e5f699fa66392a870c0e5e566004ec4e2f4b6'
 # command to run tests
 before_script:
   - psql -c 'create database travisci;' -U postgres
