--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,13 @@ addons:
 services:
   -postgresql
 before_install:
-  - export DJANGO_SETTINGS_MODULE=sub_project.settings.base
+  - export DJANGO_SETTINGS_MODULE=sub_project.settings
   - export PYTHONPATH=$HOME/builds/Bayard75/Projet8-Plateforme-de-substitution
   - export PIP_USE_MIRRORS=true
 
 install:
-  - pip3 install -r requirements.txt
-  - pip3 install psycopg2 --quiet
+  - pip install -r requirements.txt
+  - pip install psycopg2 --quiet
 # command to run tests
 before_script:
   - psql -c 'create database travisci;' -U postgres
