--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_install:
   - export PIP_USE_MIRRORS=true
 
 install:
+  - pip install pypiwin32
   - pip install -r requirements.txt
-  - pip install psycopg2 --quiet
 # command to run tests
 before_script:
   - psql -c 'create database travisci;' -U postgres
