--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
 # command to run tests
 before_script:
   - psql -c 'create database travisci;' -U postgres
+  - python manage.py collectstatic
   - python manage.py migrate
 
 script:
